src/test/deca/context/valid/created/classe.deca
// Description :
//		une classe simple
//
// Resultats :
//		Ok


class A{
int x;
int y;
int met(){
}
float met2(){
}
}