src/test/deca/context/invalid/created/decl_class/decl_class_int.deca
// Description :
//    declaration d'une class deja definie par defaut
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 8 : (1.3) La classe est déjà définie

class int {}